js/js.translator/testData/incremental/invalidation/circleInlineImportsUpdate/lib1/f.kt
inline fun f1() = f1_2()
